Wed Feb  5 20:27:50 1997  Richard Basch  <basch@lehman.com>

	* acquire_cred.c (acquire_accept_cred): Removed unused local variable

Tue Feb  4 15:56:01 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Only override the object build of the error table
		under Unix

Wed Dec  4 13:06:13 1996  Barry Jaspan  <bjaspan@mit.edu>

	* acquire_cred.c (acquire_accept_cred): use krb5_kt_get_entry
 	instead of scanning through keytab to find matching principal
 	[krb5-libs/210]

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build

	* gssapiP_krb5.h krb5_gss_glue.c:
	DLL export all public GSSAPI interfaces; adjusted some other
	declarations accordingly (KRB5_CALLCONV, FAR keywords added)

Wed Nov 20 19:55:29 1996  Marc Horowitz  <marc@cygnus.com>

	* init_sec_context.c (make_ap_rep, krb5_gss_init_sec_context),
 	accept_sec_context.c (krb5_gss_accept_sec_context): fix up use of
 	gss flags.  under some circumstances, the context would not have
 	checked for replay or sequencing, even if those features were
	requested.

	* init_sec_context.c (make_ap_req), (krb5_gss_init_sec_context):
 	If delegation is requested, but forwarding the credentials fails,
	instead of aborting the context setup, just don't forward
	credentials.

	* gssapiP_krb5.h (krb5_gss_ctx_id_t), ser_sctx.c
 	(kg_ctx_externalize, kg_ctx_internalize), init_sec_context.c
 	(krb5_gss_init_sec_context), get_tkt_flags.c
 	(gss_krb5_get_tkt_flags), accept_sec_context.c
 	(krb5_gss_accept_sec_context): rename ctx->flags to
 	ctx->krb_flags, to disambiguate it from ctx->gss_flags

	* accept_sec_context.c (krb5_gss_accept_sec_context): If the subkey
	isn't present in the authenticator, then use the session key
	instead.

Sat Oct 19 00:38:22 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* ser_sctx.c (kg_oid_externalize, kg_oid_internalize,
 		kg_oid_size): Add a GSSAPI OID magic number to the
 		externalized OID, so that if the OID is skipped, (it is